video link bugfix, left-align for description

--- a/src/App.css
+++ b/src/App.css
@@ -159,3 +159,7 @@
   text-align: left;
   padding-left: 20px;
 }
+
+.ListItem{
+  text-align: left;
+}
